modules/security/main.tf
# HTTP Security Group and Rules

resource "aws_security_group" "allow_http" {
  name        = "Main_allow_http"
  vpc_id      = var.vpc_id
  egress {
    from_port         = 0
    to_port           = 0
    protocol          = "-1"
    cidr_blocks       = ["0.0.0.0/0"]
    ipv6_cidr_blocks  = ["::/0"]
  }
}

# HTTP Rule 

resource "aws_security_group_rule" "allow_http" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  ipv6_cidr_blocks  = ["::/0"]
  security_group_id = aws_security_group.allow_http.id
}

# HTTP Custom Port Rule

resource "aws_security_group_rule" "allow_custom_port" {
  type              = "ingress"
  from_port         = 3000
  to_port           = 3000
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  ipv6_cidr_blocks  = ["::/0"]
  security_group_id = aws_security_group.allow_http.id
}

# ------------------------------------------------------------

# HTTPS Security Group and Rule

resource "aws_security_group" "allow_https" {
  name        = "Main_allow_https"
  vpc_id      = var.vpc_id
  egress {
    from_port         = 0
    to_port           = 0
    protocol          = "-1"
    cidr_blocks       = ["0.0.0.0/0"]
    ipv6_cidr_blocks  = ["::/0"]
  }
}

# HTTPS Rule

resource "aws_security_group_rule" "allow_https" {
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  ipv6_cidr_blocks  = ["::/0"]
  security_group_id = aws_security_group.allow_https.id
}

# ------------------------------------------------------------

# SSH Security Group and Rule

resource "aws_security_group" "allow_ssh" {
  name        = "Main_allow_ssh"
  vpc_id      = var.vpc_id
  egress {
    from_port         = 0
    to_port           = 0
    protocol          = "-1"
    cidr_blocks       = ["0.0.0.0/0"]
    ipv6_cidr_blocks  = ["::/0"]
  }
}

# SSH Rule from my IP

resource "aws_security_group_rule" "allow_ssh" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = [var.my_ip]
  security_group_id = aws_security_group.allow_ssh.id
}

# SSH Rule from inside VPC

resource "aws_security_group_rule" "allow_ssh_within_vpc" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["10.0.0.0/16"] 
  security_group_id = aws_security_group.allow_ssh.id
}


# ------------------------------------------------------------

# # Bastion host security group

# resource "aws_security_group" "bastion_host_sg" {
#   name        = "bastion_sg"
#   description = "Security Group for Bastion Host"
#   vpc_id      = var.vpc_id

#   ingress {
#     from_port   = 22
#     to_port     = 22
#     protocol    = "tcp"
#     cidr_blocks = [var.my_ip]
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   tags = {
#     Name = "BastionSG"
#   }
# }
